<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_mask"
    android:padding="@dimen/dialog_padding">

    <RelativeLayout
        android:id="@+id/contentDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_background"
        android:padding="@dimen/dialog_padding">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/action_alert"
            android:textColor="@color/gray"
            android:textSize="@dimen/xmh_textsiz" />

        <ScrollView
            android:id="@+id/message_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:paddingBottom="@dimen/dialog_scrollview_padding"
            android:scrollbarThumbVertical="@color/thumbColor"
            android:scrollbars="none">

            <include
                android:id="@+id/dialog_contentview"
                layout="@layout/addnote"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/message_scrollView"
            android:layout_marginTop="@dimen/dialog_btn_paddingTop"
            android:gravity="right"
            android:orientation="horizontal">

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/cancel" />

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/button_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/action_actionbar"
                android:text="@string/accept" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>