<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.gaverchou.suidaokou.widget.RevealBackgroundView
        android:id="@+id/activity_start_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <View
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_theme"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/profile_header"
                layout="@layout/profile_headerview" />

            <LinearLayout
                android:id="@+id/profile_moto_ll"
                style="@style/Profile_selector"
                android:paddingRight="@dimen/profile_layout_selector2_paddingright">


                <View
                    style="@style/Drawer.Seletor_icon"
                    android:background="@mipmap/me"></View>

                <TextView
                    android:id="@+id/profile_layout_biaoqian_tv"
                    style="@style/Profile_selector_TextViewTit"
                    android:singleLine="false"
                    android:text="@string/test_profile" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_info_ll"
                style="@style/Profile_selector"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/birthday_icon"
                        style="@style/Drawer.Seletor_icon"
                        android:background="@mipmap/me"></View>

                    <TextView
                        style="@style/Profile_selector_TextViewTit"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/birthday_icon"
                        android:text="@string/birthday" />

                    <TextView
                        android:id="@+id/profile_layout_birthday_tv"
                        style="@style/Profile_selector_TextView"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="1994-03-24" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/profile_layout_selector_item_margintop">

                    <View
                        android:id="@+id/hobby_icon"
                        style="@style/Drawer.Seletor_icon"
                        android:background="@mipmap/me"></View>

                    <TextView
                        style="@style/Profile_selector_TextViewTit"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/hobby_icon"
                        android:text="@string/diqu" />

                    <TextView
                        android:id="@+id/profile_layout_diqu_tv"
                        style="@style/Profile_selector_TextView"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="广州" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/profile_layout_selector_item_margintop">

                    <View
                        android:id="@+id/diqu_icon"
                        style="@style/Drawer.Seletor_icon"
                        android:background="@mipmap/me"></View>

                    <TextView
                        style="@style/Profile_selector_TextViewTit"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/diqu_icon"
                        android:text="@string/hobby" />

                    <TextView
                        android:id="@+id/profile_layout_hobby_tv"
                        style="@style/Profile_selector_TextView"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="打羽毛球" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/main_toolbar"
        layout="@layout/toolbar"></include>
</RelativeLayout>